<resources>
    <string name="app_name">HelloWorld</string>
    <string name="title_activity_main">XK HelloWorld</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</string>

    <string name="startup">启动</string>
    <string name="stop">停止</string>
    <string name="broadcast">发送广播</string>
    <string name="msgHint">消息提示如下</string>
    <string name="msg">消息提示</string>

    <string name="addStu">添加学生</string>
    <string name="delStu">删除学生</string>
    <string name="queryStu">查询学生姓名</string>

    <string name="student_name">学生姓名</string>
    <string name="student_number">学生学号</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="replaceFragment">替换碎片</string>
    <string name="openWeb">打开网页</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="shiftActivity">切换活动</string>
    <string name="inputPassword">输入密码</string>

</resources>