<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="8dp"
    android:rotationY="0"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="187dp"
        android:layout_gravity="center"
        android:hint="@string/msg"
        android:text="@string/msgHint"
        android:layout_marginBottom="10dp"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text="@string/startup"
            android:visibility="visible" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text="@string/stop"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/broadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/broadcast"
            android:visibility="visible" />

        <Button
            android:id="@+id/replaceFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/replaceFragment" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">


        <EditText
            android:id="@+id/stu_No"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_number"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/stu_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/student_name"
            android:textAlignment="center"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/addStu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/addStu" />

        <Button
            android:id="@+id/delStu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/addStu"
            android:layout_alignParentEnd="true"
            android:text="@string/delStu" />

        <Button
            android:id="@+id/queryStu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/queryStu" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"></LinearLayout>

</LinearLayout>